# cpp-tamagochi

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md
ascii-art/chatgpt/: dead  hungry  sleepy
ascii-art/dave/: dead  happy
include/: actions.h  burger.h  cake.h  food.h  status.h  tamagochi.h  ui.h  utils.h
pixelart/: happy  sad  sleepy
pixelart/chatgpt/: dead  happy  hungry  sad  sleepy
pixelart/dave/: dead  sad  sleepy
scripts/: build  build_and_run  clean  clean_and_build  remove_submodule  run
src/: main.cpp  tamagochi.cpp  ui.cpp  utils.cpp
